# walk-the-dog.rs

./: Makefile
app/: package-lock.json  package.json  vite.config.ts
app/app/routes/: _index.tsx
core/: Cargo.toml
core/src/: browser.rs  engine.rs  game.rs  lib.rs
